<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_img"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            style="@style/TicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/enter_your_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playerNameEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/your_name"
                android:text=""
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pick_your_side" />

        <RadioGroup
            android:id="@+id/playerSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/crossSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_tic1icon" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/zeroSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_tic0icon" />
        </RadioGroup>

        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TicTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opponent" />

            <RadioGroup
                android:id="@+id/opponentSelectionGp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/humanRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_person_24" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/aiRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_droid_24" />
            </RadioGroup>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/opponentNameEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:visibility="invisible"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/opponent_name"
                android:text=""
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:padding="16dp"
            android:shadowColor="@color/offWhiteColor"
            android:text="@string/next"
            android:textSize="16sp"
            app:cornerRadius="50dp" />


    </LinearLayout>

</layout>