<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        tools:context=".GameBoardActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"

            >

            <TextView
                android:id="@+id/playerName"
                style="@style/TicTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/player_1" />


            <TextView
                android:id="@+id/playerPlusOpponentScore"
                style="@style/TicTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@drawable/round_bg"
                android:text="@string/scoreCard" />

            <TextView
                android:id="@+id/opponentName"
                style="@style/TicTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/player_2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gameBoardLinearLayout"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/round_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_0"
                    android:layout_width="99dp"
                    android:layout_height="99dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:onClick="placeTic" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@color/divider" />

                <ImageButton
                    android:id="@+id/btn_1"
                    android:layout_width="100dp"
                    android:layout_height="99dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@color/divider" />

                <ImageButton
                    android:id="@+id/btn_2"
                    android:layout_width="99dp"
                    android:layout_height="99dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_3"
                    android:layout_width="99dp"
                    android:layout_height="100dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <ImageButton
                    android:id="@+id/btn_4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <ImageButton
                    android:id="@+id/btn_5"
                    android:layout_width="99dp"
                    android:layout_height="100dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_6"
                    android:layout_width="99dp"
                    android:layout_height="99dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:background="@color/divider" />

                <ImageButton
                    android:id="@+id/btn_7"
                    android:layout_width="100dp"
                    android:layout_height="99dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:background="@color/divider" />

                <ImageButton
                    android:id="@+id/btn_8"
                    android:layout_width="99dp"
                    android:layout_height="99dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueBtn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:onClick="resetGame"
                android:padding="16dp"
                android:shadowColor="@color/offWhiteColor"
                android:text="@string/new_game"
                android:textSize="16sp"
                app:cornerRadius="50dp" />

            <TextView
                android:id="@+id/commentator"
                style="@style/TicTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="" />
        </LinearLayout>


    </LinearLayout>
</layout>